Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Peter McCluskey (Apr 26, 2002)
   Changed to convert ampersands in urls to &amp;.

 Peter McCluskey (Apr 22, 2002)
   Add Greek language support from Akis Karnouskos.
   Surpress <p> within <pre>.

 Peter McCluskey (Mar 22, 2002)
   Fixed to rewrite old messages that have new replies (some links to
   replies/next in thread had been missing for overwrite=0, increment=0,
   and also for linkquotes = 1).
   Updated configure to reflect Daniel's changes to fix --without-gdbm in configure.in.

 Peter McCluskey (Mar 19, 2002)
   Increase MAXSTACK from 20 to 200.

 Peter McCluskey (Feb 4, 2002)
   Fix to avoid converting strings like ftp://user@host.com to mailto's.

 Peter McCluskey (Feb 4, 2002)
   Patch from William R. Knox to add meta date tag.

 Jose Kahan (jose@w3.org) (Jan 25, 2002)
   - When a message had a charset of type US-ASCII or ISO-8959-1, it wasn't being
     stored in the HTML version of the message. This could result in a correct
     decoding of the message, as browsers assume a user-given default charset in those
     cases.

Peter McCluskey (Jan 11 2002)
   Patch from William R. Knox to fix possible race condition in creating dirs.

Peter McCluskey (Jan 10 2002)
   Add %t substitution cookies to provide path to top folder.

Peter McCluskey (Jan  5 2002)
   Fix segfault in incremental mode with linkquotes.

Peter McCluskey (Dec 19 2001)
   Create version 2.1.4 tarball.

Peter McCluskey (Dec 14 2001)
   Applied patch from William King adding </li>'s.

Peter McCluskey (Dec 10 2001)
   Fix bug in chronological ordering of folders.

Peter McCluskey (Dec 6 2001)
   Applied patch from William King to fix footer links on attachment index.

Peter McCluskey (Dec 4 2001)
   Change to detect start of new message when mime boundary missing,
   treat unbounded text as plain text body.

Peter McCluskey (Dec 2 2001)
   Applied patches from William King:
    -  DTD changed to strict.